argocd/monitoring/syslog-ng.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syslog-ng
  namespace: monitoring
  labels:
    app: syslog-ng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syslog-ng
  template:
    metadata:
      labels:
        app: syslog-ng
    spec:
      containers:
      - name: syslog-ng
        image: balabit/syslog-ng:latest
        ports:
        - containerPort: 514
          name: syslog-tcp
          protocol: TCP
        - containerPort: 514
          name: syslog-udp
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /etc/syslog-ng
      volumes:
      - name: config
        configMap:
          name: syslog-ng-config
---
apiVersion: v1
kind: Service
metadata:
  name: syslog-ng
  namespace: monitoring
  labels:
    app: syslog-ng
    bgp: "pool-a"
    bgp-announce: "true"
spec:
  selector:
    app: syslog-ng
  ports:
  - name: syslog-tcp
    protocol: TCP
    port: 514
    targetPort: 514
  - name: syslog-udp
    protocol: UDP
    port: 514
    targetPort: 514
  type: LoadBalancer
  externalTrafficPolicy: Local
